fix rental images not showing

--- a/src/components/lexical/nodes/ImageToolbar.css
+++ b/src/components/lexical/nodes/ImageToolbar.css
@@ -41,7 +41,7 @@
 }
 
 .toolbar {
-  display: flex;
+  display: inline-flex;
   margin-bottom: 1px;
   background: #fff;
   padding: 4px;
